Cellgrid can now expand when gridLimit is equal to INFINITE. Implemented by adding new empty columns or rows when any of the edge cells is not empty. Fixed problems with wa-tor by making the length of the row and column of wator xml files identical